@@ -1,11 +1,19 @@
 package com.coolacid.banquitos;
 
+import java.util.ArrayList;
+
+import org.json.JSONArray;
+import org.json.JSONException;
+import org.json.JSONObject;
+import org.json.JSONStringer;
+
 import android.location.Location;
 import android.os.Bundle;
 import android.app.Activity;
 import android.content.Context;
 import android.content.IntentSender;
 import android.content.SharedPreferences;
+import android.util.Log;
 import android.view.Menu;
 import android.view.MenuItem;
 import android.widget.Toast;
@@ -20,6 +28,11 @@ import com.google.android.gms.maps.GoogleMap;
 import com.google.android.gms.maps.MapFragment;
 import com.google.android.gms.maps.model.CameraPosition;
 import com.google.android.gms.maps.model.LatLng;
+import com.google.android.gms.maps.model.Marker;
+import com.google.android.gms.maps.model.MarkerOptions;
+import com.loopj.android.http.AsyncHttpResponseHandler;
+import com.loopj.android.http.JsonHttpResponseHandler;
+import com.loopj.android.http.RequestParams;
 
 public class Mapa extends Activity implements GooglePlayServicesClient.ConnectionCallbacks, 
 											  GooglePlayServicesClient.OnConnectionFailedListener{
@@ -32,6 +45,9 @@ public class Mapa extends Activity implements GooglePlayServicesClient.Connectio
 	Location mCurrentLocation;
 	LocationRequest mLocationRequest;
 	SharedPreferences sharedPref;
+	
+	BanquitosAPI API;
+	ArrayList<Marker> marcadores;
 
 	@Override
 	protected void onCreate(Bundle savedInstanceState) {
@@ -48,9 +64,11 @@ public class Mapa extends Activity implements GooglePlayServicesClient.Connectio
 		mapa = ((MapFragment) getFragmentManager().findFragmentById(R.id.map)).getMap();
 		if (mapa != null){
 			mapa.setMyLocationEnabled(true);
-			LatLng pastCenter = new LatLng(new Double(sharedPref.getString("lat", "19.432681")), new Double(sharedPref.getString("lng", "-99.13332")));
-			mapa.moveCamera(CameraUpdateFactory.newLatLngZoom(pastCenter, new Float(sharedPref.getInt("zoom", 15))));
+			LatLng pastCenter = new LatLng(Double.valueOf(sharedPref.getString("lat", "19.432681")), Double.valueOf(sharedPref.getString("lng", "-99.13332")));
+			mapa.moveCamera(CameraUpdateFactory.newLatLngZoom(pastCenter, Float.valueOf(sharedPref.getInt("zoom", 15))));
 		}
+		API = new BanquitosAPI();
+		marcadores = new ArrayList<Marker>();
 	}
 	
 	@Override
@@ -68,8 +86,8 @@ public class Mapa extends Activity implements GooglePlayServicesClient.Connectio
 	@Override
 	protected void onPause() {
 		SharedPreferences.Editor editor = sharedPref.edit();
-		CameraPosition posicionCamara = mapa.getCameraPosition();
 		if (mapa != null){
+			CameraPosition posicionCamara = mapa.getCameraPosition();
 			editor.putString("lat", String.valueOf(posicionCamara.target.latitude));
 			editor.putString("lng", String.valueOf(posicionCamara.target.longitude));
 			editor.putInt("zoom", (int) posicionCamara.zoom);
@@ -93,6 +111,14 @@ public class Mapa extends Activity implements GooglePlayServicesClient.Connectio
 	@Override
 	public boolean onOptionsItemSelected(MenuItem item){
 		switch (item.getItemId()) {
+			case R.id.refresh:
+				try {
+					refreshMap();
+				} catch (JSONException e) {
+					// TODO Auto-generated catch block
+					e.printStackTrace();
+				}
+				return true;
 			default:
 				return super.onOptionsItemSelected(item); 
 		}
@@ -133,6 +159,68 @@ public class Mapa extends Activity implements GooglePlayServicesClient.Connectio
 	public void onDisconnected() {
 		// TODO Auto-generated method stub
 		
+	}
+	
+	private void refreshMap() throws JSONException{
+		Toast.makeText(this, "Cargando mapas en esta area", Toast.LENGTH_SHORT).show();
+		CameraPosition posicionCamara = mapa.getCameraPosition();
+		String lat = String.valueOf(posicionCamara.target.latitude);
+		String lng = String.valueOf(posicionCamara.target.longitude);
+		RequestParams params = new RequestParams();
+		params.put("lat",lat);
+		params.put("lon", lng);
+		API.apiCall("main/near", params, "POST", new JsonHttpResponseHandler(){
+			@Override
+			public void onSuccess(int arg0, String arg1) {
+				Log.i("MYTAG", arg1);
+				super.onSuccess(arg0, arg1);
+			}
+			
+			@Override
+			public void onSuccess(int arg0, JSONObject resp) {
+				// TODO Auto-generated method stub
+				try {
+					if (resp.getInt("resultados")>0) {
+						for (Marker marcador: marcadores) {
+							marcador.remove();
+						}
+						marcadores.clear();
+						JSONArray sucursales = resp.getJSONArray("sucursales");
+						for (int i = 0; i < sucursales.length(); i++) {
+						    JSONObject sucursal = sucursales.getJSONObject(i);
+						    JSONArray latlon = sucursal.getJSONArray("latlon");
+						    Log.i("MYTAG", sucursal.toString());
+						    // Ponemos el marcador
+						    Marker marcador = mapa.addMarker(
+						    		new MarkerOptions().position(
+						    				new LatLng(latlon.getDouble(0), latlon.getDouble(1))
+						    		)
+						    );
+						    marcadores.add(marcador);
+						}
+					}else{
+						Toast.makeText(getApplicationContext(), "No se han encontrado bancos en esta area.", Toast.LENGTH_SHORT).show();
+					}
+				} catch (JSONException e) {
+					// TODO Auto-generated catch block
+					e.printStackTrace();
+				}
+				super.onSuccess(arg0, resp);
+			}
+			
+			@Override
+			public void onFailure(Throwable arg0, JSONObject arg1) {
+				// TODO Auto-generated method stub
+				Log.i("MYTAG", arg1.toString());
+				try {
+					Toast.makeText(getApplicationContext(), arg1.getString("error"), Toast.LENGTH_SHORT).show();
+				} catch (JSONException e) {
+					// TODO Auto-generated catch block
+					e.printStackTrace();
+				}
+				super.onFailure(arg0, arg1);
+			}
+		});
 	}
 
 }
